# opensource-llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  first_llm.py  promtp_engineering.py  pyproject.toml  requirements.txt
docs/: interface-first-design-guide.md  notes.md
notebooks/: 01_first_ollama.ipynb  02_prompt_engineering.ipynb
src/: app.py  rag_app.py  rag_chatbot.py  rag_streamlite.py
src/chunker/: __init__.py  base_chunker.py  config.py  recursive_chunker.py  schema.py
src/embedder/: __init__.py  base_embedder.py  ollama_embedder.py
src/llm/: __init__.py  base_llm.py  ollama_llm.py
src/loader/: __init__.py  base_loader.py
src/loader/pdf/: __init__.py  pypdf_loader.py
src/pipeline/: __init__.py  rag_pipeline.py  schema.py
src/vector_store/: __init__.py  base_vector_store.py  chroma_store.py
tests/: test_basic.py
