[project]
name = "opensource-llm"
version = "0.1.0"
description = "Local LLM experiments with Ollama and RAG"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
